<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context="edu.sdsu.cs.cs646.assign2.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_activity_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_text"
        />

    <Spinner
        android:id="@+id/activity_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activity_array"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_field"
        android:inputType="text|textCapSentences"
        android:imeOptions="actionDone"
        android:hint="@string/enter_text_hint"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/go_button"
        android:layout_gravity="center"
        android:onClick="goToActivity"
        android:layout_marginTop="20dp"/>


</LinearLayout>
